# Cargo-location-and-classification

./: README.md
ClusterClassificationPython/: ActualDataLoader.py  DataLoader.py  GeneratePointCloudDataset.py  Model.py  provider.py  test.py  train.py
ClusterClassificationPython/actual_data/data/: clusster_0.txt  clusster_1.txt  clusster_2.txt  clusster_3.txt
ClusterClassificationPython/data/: shape_names.txt
ClusterClassificationPython/data/raw_data/cone/: cone.txt
ClusterClassificationPython/data/raw_data/cuboid/: cuboid.txt  cuboid1.txt
ClusterClassificationPython/data/raw_data/cylinder/: cylinder.txt  cylinder1.txt  cylinder2.txt
SrcCpp/: CMakeLists.txt  main.cpp
SrcCpp/class/: Cluster.cpp  Cluster.h  DBSCAN.cpp  DBSCAN.h  Position.cpp  Position.h  SimObject.cpp  SimObject.h
SrcCpp/cmake/: FindEigen3.cmake  FindNanoFlann.cmake
SrcCpp/include/: AcqirePointCloudFromCoppeliaSim.h  Dispatch.h  Macro.h  PointCloudClassification.h  PointCloudCluster.h  PointCloudMerge.h  PointCloudRegistration.h  PointCloudStatisticalFiltering.h  RANSECRemoveGround.h  ReadPointCloudFile.h  RemoveCrane.h  RemoveGroundFromAllPointClouds.h  SinglePointCloudVisualization.h
SrcCpp/src/: AcqirePointCloudFromCoppeliaSim.cpp  Dispatch.cpp  PointCloudClassification.cpp  PointCloudCluster.cpp  PointCloudMerge.cpp  PointCloudRegistration.cpp  PointCloudStatisticalFiltering.cpp  RANSECRemoveGround.cpp  ReadPointCloudFile.cpp  RemoveCrane.cpp  RemoveGroundFromAllPointClouds.cpp  SinglePointCloudVisualization.cpp
